Add ST_IsValid and geometry_invalid_reason functions

--- a/presto-geospatial/pom.xml
+++ b/presto-geospatial/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-geospatial-toolkit</artifactId>
         </dependency>
